<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="drawer_layout_demo">Drawer Layout Demo</string>
    <string name="one">One</string>
    <string name="Two">Two</string>
    <string name="Three">Three</string>
    <string name="Four">Four</string>
    <string name="Five">five</string>
    <string name="six">Six</string>
    <string name="Seven">Seven</string>

    <string name="open">Open</string>

    <string name="close"><Close></Close></string>
    <string name="my_profile">My Profile</string>
    <string name="my_favourites">My Favourites</string>
    <string name="about_community">About Community</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="terms_and_conditions"><![CDATA[Terms  & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="list_your_company">List Your Company</string>
    <string name="are_you_a_business_owner">Are you a business owner ?</string>

</resources>