<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >


    <item
        android:id="@+id/mItemOne"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/mItemTwo"
        android:title="@string/my_favourites" />
    <item
        android:id="@+id/mItemThree"
        android:title="@string/about_community" />
    <item
        android:id="@+id/mItemFour"
        android:title="@string/invite_friends" />
    <item
        android:id="@+id/mItemFive"
        android:title="@string/terms_and_conditions" />
    <item
        android:id="@+id/mItemSix"
        android:title="@string/privacy_policy"/>
    <item
        android:id="@+id/mItemSeven"
        android:title="@string/contact_us" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout" />

</menu>